src/objects/Alert__c.object
<CustomObject>
    <description>Alerts tied to a customer</description>
    <fields>
        <fullName>Contact__c</fullName>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Alerts</relationshipLabel>
        <relationshipName>Alerts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Details__c</fullName>
        <description>Something brief about the alert</description>
        <inlineHelpText>Something brief about the alert</inlineHelpText>
        <label>Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>When does this alert expire?</description>
        <inlineHelpText>When does this alert expire?</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>When is this alert applicable for start?</description>
        <inlineHelpText>When is this alert applicable for start?</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>Financial</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Legal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Recovery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR Service Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR Sales Credit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CR Customer Notice</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Alert</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Alert Title</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Alerts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>